<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calories_calculator"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnShopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping_list_label"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnBmiWebChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_chart_label" />
</LinearLayout>
